rename icon (must in small letter)

--- a/app/src/main/res/layout/fragment_saving_tips.xml
+++ b/app/src/main/res/layout/fragment_saving_tips.xml
@@ -74,7 +74,7 @@
                             android:id="@+id/iconinvest"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/iconInvestment2"
+                            android:src="@drawable/icon_investment2"
                             app:layout_constraintBottom_toBottomOf="@+id/circle"
                             app:layout_constraintEnd_toEndOf="@+id/circle"
                             app:layout_constraintStart_toStartOf="@+id/circle"
@@ -122,7 +122,7 @@
                             android:id="@+id/iconemergency"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/iconEmergency"
+                            android:src="@drawable/icon_emergency"
                             app:layout_constraintBottom_toBottomOf="@+id/circle"
                             app:layout_constraintEnd_toEndOf="@+id/circle"
                             app:layout_constraintStart_toStartOf="@+id/circle"
@@ -170,7 +170,7 @@
                             android:id="@+id/icondonation"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/iconDonation"
+                            android:src="@drawable/icon_donation"
                             app:layout_constraintBottom_toBottomOf="@+id/circle"
                             app:layout_constraintEnd_toEndOf="@+id/circle"
                             app:layout_constraintStart_toStartOf="@+id/circle"
