--- a/app/src/main/res/layout/fragment_saving_tips.xml
+++ b/app/src/main/res/layout/fragment_saving_tips.xml
@@ -42,8 +42,8 @@
         <TableLayout
             android:layout_width="413dp"
             android:layout_height="512dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="72dp">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TableRow
                 android:id="@+id/RowInvest"
@@ -62,28 +62,28 @@
                         android:background="@drawable/rounded_rectangle_green">
 
                         <ImageView
-                            android:id="@+id/circle"
+                            android:id="@+id/circle1"
                             android:layout_width="90dp"
                             android:layout_height="90dp"
                             android:layout_margin="8dp"
                             android:src="@drawable/circle_white"
-                            tools:layout_editor_absoluteX="5dp"
-                            tools:layout_editor_absoluteY="5dp" />
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
                             android:id="@+id/iconinvest"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
                             android:src="@drawable/icon_investment2"
-                            app:layout_constraintBottom_toBottomOf="@+id/circle"
-                            app:layout_constraintEnd_toEndOf="@+id/circle"
-                            app:layout_constraintStart_toStartOf="@+id/circle"
-                            app:layout_constraintTop_toTopOf="@+id/circle" />
+                            app:layout_constraintBottom_toBottomOf="@+id/circle1"
+                            app:layout_constraintEnd_toEndOf="@+id/circle1"
+                            app:layout_constraintStart_toStartOf="@+id/circle1"
+                            app:layout_constraintTop_toTopOf="@+id/circle1" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/investment_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Investment"
@@ -110,28 +110,28 @@
                         android:background="@drawable/rounded_rectangle_green">
 
                         <ImageView
-                            android:id="@+id/circle"
+                            android:id="@+id/circle2"
                             android:layout_width="90dp"
                             android:layout_height="90dp"
                             android:layout_margin="8dp"
                             android:src="@drawable/circle_white"
-                            tools:layout_editor_absoluteX="5dp"
-                            tools:layout_editor_absoluteY="5dp" />
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
                             android:id="@+id/iconemergency"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
                             android:src="@drawable/icon_emergency"
-                            app:layout_constraintBottom_toBottomOf="@+id/circle"
-                            app:layout_constraintEnd_toEndOf="@+id/circle"
-                            app:layout_constraintStart_toStartOf="@+id/circle"
-                            app:layout_constraintTop_toTopOf="@+id/circle" />
+                            app:layout_constraintBottom_toBottomOf="@+id/circle2"
+                            app:layout_constraintEnd_toEndOf="@+id/circle2"
+                            app:layout_constraintStart_toStartOf="@+id/circle2"
+                            app:layout_constraintTop_toTopOf="@+id/circle2" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/emergencytext"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Emergency"
@@ -158,28 +158,28 @@
                         android:background="@drawable/rounded_rectangle_green">
 
                         <ImageView
-                            android:id="@+id/circle"
+                            android:id="@+id/circle3"
                             android:layout_width="90dp"
                             android:layout_height="90dp"
                             android:layout_margin="8dp"
                             android:src="@drawable/circle_white"
-                            tools:layout_editor_absoluteX="5dp"
-                            tools:layout_editor_absoluteY="5dp" />
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
                             android:id="@+id/icondonation"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
                             android:src="@drawable/icon_donation"
-                            app:layout_constraintBottom_toBottomOf="@+id/circle"
-                            app:layout_constraintEnd_toEndOf="@+id/circle"
-                            app:layout_constraintStart_toStartOf="@+id/circle"
-                            app:layout_constraintTop_toTopOf="@+id/circle" />
+                            app:layout_constraintBottom_toBottomOf="@+id/circle3"
+                            app:layout_constraintEnd_toEndOf="@+id/circle3"
+                            app:layout_constraintStart_toStartOf="@+id/circle3"
+                            app:layout_constraintTop_toTopOf="@+id/circle3" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/donationtext"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Donation"
