--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,7 +52,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/corner_rect"
+        android:background="@xml/corner_rect"
         android:ems="10"
         android:hint="@string/mobilenum"
         android:inputType="textPersonName"
@@ -65,7 +65,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="4dp"
-        android:background="@drawable/corner_rect"
+        android:background="@xml/corner_rect"
         android:ems="10"
         android:hint="@string/username"
         android:inputType="textPersonName"
@@ -90,10 +90,10 @@
         android:layout_height="48dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/corner_rect"
+        android:background="@xml/corner_rect"
         android:ems="10"
         android:hint="@string/email"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TVEmail2" />
 
@@ -129,7 +129,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/corner_rect"
+        android:background="@xml/corner_rect"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPersonName"
@@ -141,7 +141,7 @@
         android:layout_width="257dp"
         android:layout_height="48dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/corner_rect"
+        android:background="@xml/corner_rect"
         android:backgroundTint="#29B6F6"
         android:text="@string/register"
         android:textColor="#FFFFFF"
