--- a/app/src/main/res/layout/fragment_money_record.xml
+++ b/app/src/main/res/layout/fragment_money_record.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
@@ -358,6 +359,23 @@ tools:context=".fragment_money_record">
             app:layout_constraintEnd_toEndOf="@+id/entertainment_box_view"
             app:layout_constraintStart_toStartOf="@+id/entertainment_box_view"
             app:layout_constraintTop_toBottomOf="@+id/entertainment_text" />
+
+        <Button
+            android:id="@+id/more_expenses_button"
+            android:layout_width="120dp"
+            android:layout_height="132dp"
+            android:layout_marginStart="10dp"
+            android:text="View detail"
+            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:paddingBottom="35dp"
+            android:textAllCaps="false"
+            android:drawableTop="@drawable/more"
+            android:paddingTop="15dp"
+            android:background="@drawable/rounded_box_white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/entertainment_box_view"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
