--- a/app/src/main/res/layout/fragment_1st_budget_guide.xml
+++ b/app/src/main/res/layout/fragment_1st_budget_guide.xml
@@ -2,24 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
+    android:id="@+id/budget1_constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e5e5e5"
     tools:context=".Fragment_1st_budget_guide">
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/top_budget"
         android:layout_width="411dp"
         android:layout_height="111dp"
         android:background="@drawable/top_background"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/budget_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
@@ -29,20 +28,20 @@
         android:textColor="#ffffff"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view" />
+        app:layout_constraintTop_toTopOf="@+id/top_budget" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/budget_info_icon"
         android:layout_width="55dp"
         android:layout_height="47dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="27dp"
         android:src="@drawable/info"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/budget_name"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/budget_desc"
         android:layout_width="320dp"
         android:layout_height="73dp"
         android:layout_marginTop="10dp"
@@ -54,20 +53,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
+        app:layout_constraintTop_toBottomOf="@+id/top_budget" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/budget_saving_icon"
         android:layout_width="99dp"
         android:layout_height="97dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_box_white"
         android:src="@drawable/jar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toBottomOf="@+id/budget_wants" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/budget_saving_perc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -75,43 +75,44 @@
         android:fontFamily="sans-serif-black"
         android:text="Savings : 20%"
         android:textColor="#000000"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintStart_toEndOf="@+id/budget_saving_icon"
+        app:layout_constraintTop_toBottomOf="@+id/budget_wants" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/budget_need_icon"
         android:layout_width="98dp"
         android:layout_height="98dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rounded_box_white"
         android:src="@drawable/money"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/budget_desc" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/budget_need_perc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-black"
         android:text="Needs : 50%"
         android:textColor="#000000"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintStart_toEndOf="@+id/budget_need_icon"
+        app:layout_constraintTop_toTopOf="@+id/budget_need_icon" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/budget_wants"
         android:layout_width="98dp"
         android:layout_height="98dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_box_white"
         android:src="@drawable/sales"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/budget_need_icon" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/budget_wants_perc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -119,7 +120,40 @@
         android:fontFamily="sans-serif-black"
         android:text="Wants : 30%"
         android:textColor="#000000"
-        app:layout_constraintStart_toEndOf="@+id/imageView5"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintStart_toEndOf="@+id/budget_wants"
+        app:layout_constraintTop_toBottomOf="@+id/budget_need_icon" />
+
+    <TextView
+        android:id="@+id/budget_need_desc"
+        android:layout_width="236dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="10dp"
+        android:fontFamily="sans-serif-light"
+        android:text="Allocated towards essential expenses such as housing, food, utilities, transportation, and healthcare."
+        android:textColor="#000000"
+        app:layout_constraintStart_toEndOf="@+id/budget_need_icon"
+        app:layout_constraintTop_toBottomOf="@+id/budget_need_perc" />
+
+    <TextView
+        android:id="@+id/budget_want_desc"
+        android:layout_width="236dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="10dp"
+        android:fontFamily="sans-serif-light"
+        android:text="Allocated towards non-essential expenses or wants such as entertainment, dining out, and hobbies."
+        android:textColor="#000000"
+        app:layout_constraintStart_toEndOf="@+id/budget_wants"
+        app:layout_constraintTop_toBottomOf="@+id/budget_wants_perc" />
+
+    <TextView
+        android:id="@+id/budget_saving_desc"
+        android:layout_width="236dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="10dp"
+        android:fontFamily="sans-serif-light"
+        android:text="Allocated towards savings, such as an emergency fund, or debt repayment, such as paying off credit card balances or student loans."
+        android:textColor="#000000"
+        app:layout_constraintStart_toEndOf="@+id/budget_saving_icon"
+        app:layout_constraintTop_toBottomOf="@+id/budget_saving_perc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
