--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,16 +32,26 @@
         tools:layout="@layout/fragment_money_record" >
         <action
             android:id="@+id/to1stbudget"
-            app:destination="@id/fragment_1st_budget_guide" />
+            app:destination="@id/budget1" />
         <action
             android:id="@+id/to_add_money"
             app:destination="@id/fragment_add_money" />
+        <action
+            android:id="@+id/to2ndbudget"
+            app:destination="@id/budget2" />
+        <action
+            android:id="@+id/to3rdbudget"
+            app:destination="@id/budget3" />
     </fragment>
     <fragment
-        android:id="@+id/fragment_1st_budget_guide"
+        android:id="@+id/budget1"
         android:name="com.example.unbrokebudgetapplication.Fragment_1st_budget_guide"
         android:label="fragment_1st_budget_guide"
-        tools:layout="@layout/fragment_1st_budget_guide" />
+        tools:layout="@layout/fragment_1st_budget_guide" >
+        <action
+            android:id="@+id/firstbudget_moneyrecord"
+            app:destination="@id/fragment_money_record" />
+    </fragment>
     <fragment
         android:id="@+id/fragment_add_money"
         android:name="com.example.unbrokebudgetapplication.fragment_add_money"
@@ -49,6 +59,24 @@
         tools:layout="@layout/fragment_add_money" >
         <action
             android:id="@+id/addmoney_moneyrecord"
+            app:destination="@id/fragment_money_record" />
+    </fragment>
+    <fragment
+        android:id="@+id/budget2"
+        android:name="com.example.unbrokebudgetapplication.fragment_2nd_budget_guide"
+        android:label="fragment_2nd_budget_guide"
+        tools:layout="@layout/fragment_2nd_budget_guide" >
+        <action
+            android:id="@+id/secondbudget_moneyrecord"
+            app:destination="@id/fragment_money_record" />
+    </fragment>
+    <fragment
+        android:id="@+id/budget3"
+        android:name="com.example.unbrokebudgetapplication.fragment_3rd_budget_guide"
+        android:label="fragment_3rd_budget_guide"
+        tools:layout="@layout/fragment_3rd_budget_guide" >
+        <action
+            android:id="@+id/budget3_moneyrecord"
             app:destination="@id/fragment_money_record" />
     </fragment>
 </navigation>
