--- a/app/src/main/res/layout/fragment_saving_tips.xml
+++ b/app/src/main/res/layout/fragment_saving_tips.xml
@@ -14,10 +14,11 @@
 
         <TextView
             android:id="@+id/savingTipID"
-            android:layout_width="match_parent"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="560dp"
+            android:gravity="left"
             android:text="@string/saving_tip"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
