--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="greendark">#1a434e</color>
+    <color name="greenlight">#1f505b</color>
+    <color name="whitedark">#e5e5e5</color>
 </resources>
