--- a/app/src/main/res/layout/fragment_lucky_wheel.xml
+++ b/app/src/main/res/layout/fragment_lucky_wheel.xml
@@ -20,19 +20,6 @@
         android:textColor="@color/white"
         android:textSize="40sp" />
 
-    <ImageView
-        android:id="@+id/IVbackarrow"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="661dp"
-        android:src="@drawable/ic_baseline_arrow_back_ios_24" />
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,6 +47,21 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"/>
+
+    <ImageButton
+        android:id="@+id/IBBackBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="661dp"
+        android:background="#1A434E"
+        tools:ignore="SpeakableTextPresentCheck"
+        android:src="@drawable/ic_baseline_arrow_back_ios_24" />
 
 
 </RelativeLayout>
