--- a/app/src/main/res/layout/fragment_point_redemption.xml
+++ b/app/src/main/res/layout/fragment_point_redemption.xml
@@ -70,17 +70,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/TVbalance" />
 
                 <ImageView
-                    android:id="@+id/IVgift"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="136dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.953"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/icons8_gift_64" />
-
-                <ImageView
                     android:id="@+id/IVholder1"
                     android:layout_width="140dp"
                     android:layout_height="140dp"
@@ -356,6 +345,20 @@
                     app:layout_constraintEnd_toEndOf="@+id/IVpoints6"
                     app:layout_constraintStart_toStartOf="@+id/IVpoints6"
                     app:layout_constraintTop_toTopOf="@+id/IVpoints6" />
+
+                <ImageButton
+                    android:id="@+id/IBGift"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginStart="168dp"
+                    android:layout_marginTop="120dp"
+                    android:background="#1F505B"
+                    android:src="@drawable/icons8_gift_64"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.84"
+                    tools:ignore="SpeakableTextPresentCheck"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
